# he

./: CMakeLists.txt  README.md  dosmake.bat  makefile.wcc
lib/PDCurses-3.9/: curspriv.h
src/: main.c
